// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`encodePostData() handles arrays 1`] = `
Array [
  "foo",
  "bar",
]
`;

exports[`encodePostData() handles blob 1`] = `
Array [
  "Blob",
  Array [
    "buffer",
  ],
  Object {
    "type": "text/plain",
  },
]
`;

exports[`encodePostData() handles data with compression 1`] = `"content&compression=lz64"`;

exports[`encodePostData() handles objects 1`] = `"content"`;

exports[`encodePostData() handles sendBeacon 1`] = `
Array [
  "Blob",
  Array [
    "content",
  ],
  Object {
    "type": "application/x-www-form-urlencoded",
  },
]
`;

exports[`encodePostData() handles sendBeacon when data is a typed array and blob is also true 1`] = `
Array [
  "Blob",
  Array [
    ArrayBuffer [],
  ],
  Object {
    "type": "text/plain",
  },
]
`;

exports[`encodePostData() handles sendBeacon when data is not a typed array and blob is also true 1`] = `
Array [
  "Blob",
  Array [
    "content",
  ],
  Object {
    "type": "application/x-www-form-urlencoded",
  },
]
`;
